--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   <h3>Founders </h3>
 
   <h4>Michael Hartl </h4>
+    <em><b>example text</b></em>
 
   <h5>Lee Donahoe </h5>
 
   <h6>Nick Merwin </h6>
+
 
 
 
